# study-tools

./: .gitignore  README.md  memory.md  pyproject.toml  run_app.py
.streamlit/: config.toml
docs/: README.md  development.md  installation.md  troubleshooting.md  user_guide.md
src/: app.py  chapter_splitter.py  logger.py  processor.py
